--- a/src/main/resources/assets/ori/lang/en_us.json
+++ b/src/main/resources/assets/ori/lang/en_us.json
@@ -1,4 +1,7 @@
 {
   "item.ori.raw_tanzanite": "Raw Tanzanite",
-  "item.ori.tanzanite": "Tanzanite"
+  "item.ori.tanzanite": "Tanzanite",
+
+
+  "itemGroup.ori.ori": "ori"
 }
