--- a/src/main/resources/assets/ori/lang/en_us.json
+++ b/src/main/resources/assets/ori/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.ori.raw_tanzanite": "Raw Tanzanite",
   "item.ori.tanzanite": "Tanzanite",
 
+  "block.ori.tanzanite_block": "Tanzanite Block",
 
   "itemGroup.ori.ori": "ori"
 }
