--- a/src/main/resources/assets/ori/lang/en_us.json
+++ b/src/main/resources/assets/ori/lang/en_us.json
@@ -3,6 +3,11 @@
   "item.ori.tanzanite": "Tanzanite",
 
   "block.ori.tanzanite_block": "Tanzanite Block",
+  "block.ori.tanzanite_ore": "Tanzanite Ore",
+  "block.ori.netherrack_tanzanite_ore": "Netherrack Tanzanite Ore",
+  "block.ori.deepslate_tanzanite_ore": "Deepslate Tanzanite Ore",
+  "block.ori.endstone_tanzanite_ore": "Endestone Tanzanite Ore",
+
 
   "itemGroup.ori.ori": "ori"
 }
