--- a/src/main/resources/assets/ori/lang/en_us.json
+++ b/src/main/resources/assets/ori/lang/en_us.json
@@ -8,6 +8,8 @@
   "block.ori.netherrack_tanzanite_ore": "Netherrack Tanzanite Ore",
   "block.ori.deepslate_tanzanite_ore": "Deepslate Tanzanite Ore",
   "block.ori.endstone_tanzanite_ore": "Endstone Tanzanite Ore",
+  "block.ori.jumpy_block": "Jumpy Block",
+  "block.ori.tanzanite_lamp_block": "Tanzanite Lamp",
 
 
   "itemGroup.ori.ori": "ori"
