--- a/src/main/resources/assets/ori/lang/en_us.json
+++ b/src/main/resources/assets/ori/lang/en_us.json
@@ -9,7 +9,7 @@
   "block.ori.deepslate_tanzanite_ore": "Deepslate Tanzanite Ore",
   "block.ori.endstone_tanzanite_ore": "Endstone Tanzanite Ore",
   "block.ori.jumpy_block": "Jumpy Block",
-  "block.ori.tanzanite_lamp_block": "Tanzanite Lamp",
+  "block.ori.tanzanite_lamp": "Tanzanite Lamp",
 
 
   "itemGroup.ori.ori": "ori"
